# sector

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: draining.rs  normal_sector.rs  sector_transition.rs
src/: blec.rs  components-old.rs  components.rs  lib.rs  sector.rs
src/blec/: normal.rs
src/components/: capacity.rs  drain.rs  growing.rs  index.rs  insert.rs  iter.rs  length.rs  mod.rs  pointer.rs  pop.rs  push.rs  remove.rs  resizing.rs  shrinking.rs  testing.rs
src/sector/: normal.rs
src/states/: dynamic.rs  fixed.rs  locked.rs  manual.rs  mod.rs  normal.rs  tight.rs  transitions.rs
tests/: testint_tests.rs  tests.rs
