[package]
name = "sector"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Dari-OS <darius.dev@proton.me>"]
description = "A stateful vector implementation that provides different memory management behaviors through Rust traits and state machines."
readme = "README.md"
repository = "https://github.com/Dari-OS/sector"
license = "MIT OR Apache-2.0"
categories = ["rust-patterns", "algorithms", "data-structures"]
keywords = ["collection", "array", "vector", "data-structure", "sector"]

[features]
default = []
std = ["try_reserve/std"]

[dependencies]
try_reserve = "0.2.0"
